Fix Bug #26077 - memory leak when new() result is not assigned and no constructor defined

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@148308 c90b9560-bf6c-de11-be94-00142212c4b1